# screw-agents

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: plugin.json
benchmarks/: README.md  bootstrap.sh
docs/: AGENT_AUTHORING.md  AGENT_CATALOG.md  ARCHITECTURE.md  COMMAND_REFERENCE.md  CONTRIBUTING.md  DECISIONS.md  DEFERRED_BACKLOG.md  KNOWLEDGE_SOURCES.md  PHASE_0_5_PLAN.md  PHASE_0_5_VALIDATION_GATES.md  PHASE_1_7_PLAN.md  PHASE_1_PLAN.md  PHASE_2_E2E_RESULTS.md  PHASE_2_E2E_TEST.md  PHASE_2_PLAN.md  PHASE_3A_PLAN.md  PHASE_3A_PUNCHLIST.md  PHASE_3A_X1_M1_PLAN.md  PHASE_3B_C1_PLAN.md  PHASE_3B_C2_PLAN.md  PHASE_3B_PLAN.md  PHASE_4_CLOSURE_READINESS.md  PHASE_4_D01_PLAN.md  PHASE_4_D02_PLAN.md  PHASE_4_OPERATING_MAP.md  PHASE_4_PREP_T19M_PLAN.md  PHASE_4_PREP_T_SCAN_REFACTOR_PLAN.md  PHASE_4_WAVE_C_LEDGER.md  PHASE_5_5_WEB_APP_INTEGRATION.md  PHASE_5_CLOSURE_READINESS.md  PHASE_5_MANUAL_VALIDATION.md  PHASE_5_PLAN.md  PHASE_5_PRIMARY_SCANNER_PLAN.md  PRD.md  PROJECT_STATUS.md
tests/: conftest.py  test_accumulate_finalize.py  test_adaptive_ast_walker.py  test_adaptive_cleanup.py  test_adaptive_dataflow.py  test_adaptive_executor.py  test_adaptive_findings.py  test_adaptive_inputs.py  test_adaptive_lint.py  test_adaptive_project.py  test_adaptive_public_api.py  test_adaptive_sandbox_linux.py  test_adaptive_sandbox_linux_isolation.py  test_adaptive_sandbox_macos.py  test_adaptive_signing.py  test_adaptive_staging.py  test_adaptive_subagent_prompts.py  test_adaptive_workflow.py  test_adaptive_workflow_staged.py  test_aggregate_learning_tool.py  test_aggregation.py  test_aggregation_integration.py  (+45 more)
(+266 files in other folders)
